# give-me-slurpee

./: index.html  pyproject.toml  script.js  slurpee_stores.json
scripts/: crawler.py  fetch_geo.py
slurpee/: stores.py
